# django-ninja

./: pyproject.toml
polls/: models.py  schemas.py  serializers.py  views.py
polls/migrations/: 0001_initial.py
tutorial/: api.py  authentication.py  parsers.py  settings.py  urls.py
users/: exceptions.py  schemas.py  utils.py  views.py
